tests/e2e/negative/n0005_undefined_function.cryo
// @test: undefined_function
// @expect: compile_fail
// @mode: raw
// @error_code: E0636
// @description: Calling undefined function should fail
// @tags: functions, errors

namespace NegUndefFunc;

function main() -> int {
    const result: int = nonexistent_function(1, 2);
    return 0;
}
